# spock-todo

./: .ghci  README.md  spock-todo.cabal  stack.yaml
app/Model/: CoreTypes.hs
app/Web/Actions/: People.hs
app/Web/Configuration/: ErrorCode.hs
app/Web/Forms/: RegistrationForm.hs
app/Web/Resources/: People.hs
src/: Email.hs  Main.hs
src/Configuration/: Database.hs  ErrorCode.hs  Response.hs
src/Model/: CoreTypes.hs  Email.hs
src/Web/Actions/: People.hs
src/Web/Configuration/: Database.hs  Response.hs
src/Web/Forms/: RegistrationForm.hs
static/: index.html
test/: EmailSpec.hs
