name:                spock-todo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stevenxl/spock-todo#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Leiva
maintainer:          leiva.steven@gmail.com
copyright:           Copyright: (c) 2017 Steven Leiva
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable spock-todo
  hs-source-dirs:      src
  other-modules:       Model.CoreTypes
                     , Model.Email
                     , Web.Actions.People
                     , Web.Configuration.Database
                     , Web.Configuration.ErrorCode
                     , Web.Configuration.Response
                     , Web.Forms.RegistrationForm
                     , Web.Resources.People
  default-extensions:  BangPatterns
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , NoMonomorphismRestriction
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , TypeSynonymInstances
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , Spock
                     , text
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , http-types
                     , wai-middleware-static
                     , digestive-functors
                     , digestive-functors-aeson
                     , case-insensitive
