name:                spock-todo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stevenxl/spock-todo#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Leiva
maintainer:          leiva.steven@gmail.com
copyright:           Copyright: (c) 2017 Steven Leiva
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable spock-todo-exe
  hs-source-dirs:      app
  ghc-options:         -Wall -Werror -fwarn-unused-binds  -fwarn-unused-imports
  other-modules:       Model.CoreTypes
                     , Web.Actions.People
                     , Web.Configuration.Database
                     , Web.Configuration.ErrorCode
                     , Web.Configuration.Response
                     , Web.Forms.RegistrationForm
                     , Web.Resources.People
  default-extensions:  BangPatterns
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , NoMonomorphismRestriction
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , TypeSynonymInstances
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , spock-todo
                     , Spock
                     , aeson
                     , case-insensitive
                     , digestive-functors
                     , digestive-functors-aeson
                     , http-types
                     , monad-logger
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , text
                     , wai-middleware-static

library
  default-language:    Haskell2010
  exposed-modules:     Email
  ghc-options:         -Wall -Werror -fwarn-unused-binds -fwarn-unused-imports
  hs-source-dirs:      src
  build-depends:       base >= 4.9 && < 5.0
                     , aeson
                     , case-insensitive
                     , persistent
                     , text
  default-extensions:  BangPatterns
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , NoMonomorphismRestriction
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , TypeSynonymInstances

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  other-modules:       EmailSpec
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -Werror -fwarn-unused-binds -fwarn-unused-imports
  default-extensions:  BangPatterns
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , NoMonomorphismRestriction
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , TypeSynonymInstances
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , aeson
                     , case-insensitive
                     , hspec
                     , persistent
                     , spock-todo
                     , text
